Updated Info about appwrite

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,11 @@
         <div class="container">
             <h1 class="display-5 mb-5">Hello Appwriters!</h1>
             <p class="lead">
+                Appwrite is an open-source self-hosted backend server that abstract and simplify complex and repetitive development tasks behind a very simple REST API.
+                To know more about Appwrite:- 
+                <a href="https://appwrite.io"
+                   target="_blank">Appwrite</a>
+                <br><br>
                 Appwrite playground is a simple way to explore the Appwrite API & Web
                 SDK. Use the
                 <a href="https://github.com/appwrite/playground-for-js/blob/master/public/index.html"
